# proyect_ml_eng

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci_cd.yml
examples/: __init__.py  api_examples.py  notebook_usage.ipynb
ml_pipeline/: __init__.py  predict.py  train_model.py
ml_pipeline/api/: Dockerfile  __init__.py  app.py
ml_pipeline/tests/: __init__.py  test_predict.py
monitoring/: prometheus.yml
notebooks/: IMDB_NLP_Sentiment_Analysis.ipynb
scripts/: __init__.py  benchmark_model.py  download_dataset.py
